fix(date-time): align props date time and introduce default-value (#720)

--- a/tegel/src/components/datetime/datetime.scss
+++ b/tegel/src/components/datetime/datetime.scss
@@ -283,6 +283,11 @@ slot[name='sdds-label']::slotted(*) {
   flex-basis: 100%;
   padding-top: var(--sdds-spacing-element-4);
   color: var(--sdds-datetime-helper);
+
+  .sdds-helper {
+    display: inline-flex;
+    gap: 8px;
+  }
 }
 
 //Disabled state
